manifest/objects/DMPPT__PPT_Customization__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DMPPT__Enable_FLS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Field Level Security</description>
        <inlineHelpText>Enable Field Level Security</inlineHelpText>
        <label>Enable FLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMPPT__Heroku_URL__c</fullName>
        <label>Heroku URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DMPPT__Skin__c</fullName>
        <label>Skin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Altify Powerpoint Customization</label>
</CustomObject>